ctor Double(double value) Deprecated and forRemoval